# SIN-Code-Oracle-Tool

./: AGENTS.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml
src/oracle/: __init__.py  checker.doc.md  checker.py  cli.doc.md  cli.py  generator.doc.md  generator.py
tests/: __init__.py  test_agents_md.py  test_generator.py
tests/fixtures/: calculator.py  calculator_test.py
