[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oracle"
version = "0.1.0"
description = "Verification Oracle — generate test oracles from code and detect regressions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "SIN-Code", email = "code@sin.dev" }
]
keywords = ["testing", "pytest", "oracle", "test-generation", "docstring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "typer>=0.12",
]

[project.scripts]
oracle = "oracle.cli:main"

[project.urls]
Homepage = "https://github.com/OpenSIN-Code/SIN-Code-Oracle-Tool"
Repository = "https://github.com/OpenSIN-Code/SIN-Code-Oracle-Tool"

[tool.hatch.build.targets.wheel]
packages = ["src/oracle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
